feat: adding documetation for delete-board end components
