# src/server/swagger.json
@@ -214,6 +214,50 @@
             }
           }
         }
+      },
+      "delete": {
+        "summary": "Deleta uma board por id",
+        "description": "Deleta uma baord criadas pelo usuario",
+        "tags": ["Board"],
+        "security": [{ "bearerAuth": [] }],
+        "parameters": [
+          {
+            "name": "boardId",
+            "in": "path",
+            "description": "Buscar board por id",
+            "required": true
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Bad_Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not_Fould"
+          },
+          "500": {
+            "description": "Internal_Server_Error"
+          },
+          "200": {
+            "description": "ok",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/Board"
+                },
+                "example": {
+                  "boardName": "Test",
+                  "taskConnect": "1234",
+                  "userId": "1234"
+                }
+              }
+            }
+          }
+        }
       }
     },
     "/tasks": {
